force-app/main/default/objects/Call_List__c/Call_List__c.object-meta.xml
<CustomObject>
    <label>Campaign</label>
    <nameField>
        <displayFormat>Gen{YY}{MM}{DD}-{000000}</displayFormat>
        <label>Campaign Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>