force-app/main/default/objects/Call_List__c/fields/Activity_Config__c.field-meta.xml
<CustomField>
    <fullName>Activity_Config__c</fullName>
    <label>Activity Config</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmation</fullName>
            </value>
            <value>
                <fullName>Conservation</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Survey Feedback</fullName>
            </value>
            <value>
                <fullName>Complaint Case</fullName>
            </value>
            <value>
                <fullName>Teleservices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>