force-app/main/default/objects/Call_List__c/fields/Campaign_Temp__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Temp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Temp</label>
    <referenceTo>Call_List__c</referenceTo>
    <relationshipLabel>Campaign</relationshipLabel>
    <relationshipName>Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>