force-app/main/default/objects/Call_List__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <formula>TEXT(Activity__c) &amp;&apos;-&apos;&amp; TEXT(Case_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Type</label>
    <type>Text</type>
</CustomField>