force-app/main/default/objects/Call_List__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activity__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Premium Pending</fullName>
            </value>
            <value>
                <fullName>Claim Pending</fullName>
            </value>
            <value>
                <fullName>Welcome Call</fullName>
            </value>
            <value>
                <fullName>Retain Redemption</fullName>
            </value>
            <value>
                <fullName>Retain Withdrawal</fullName>
            </value>
            <value>
                <fullName>Policy Elapse</fullName>
            </value>
            <value>
                <fullName>Debt Failure</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Survey of Claim Service</fullName>
            </value>
            <value>
                <fullName>Survey of ERA/Towing Service</fullName>
            </value>
            <value>
                <fullName>Pending Document POS</fullName>
            </value>
            <value>
                <fullName>Request ERA/Towing</fullName>
            </value>
            <value>
                <fullName>Complaint Follow Up</fullName>
            </value>
            <value>
                <fullName>Update Data</fullName>
            </value>
            <value>
                <fullName>SMS Pull Confirmation</fullName>
            </value>
            <value>
                <fullName>Premium Holiday Passive</fullName>
            </value>
            <value>
                <fullName>Premium Reminder</fullName>
            </value>
            <value>
                <fullName>Grace Period</fullName>
            </value>
            <value>
                <fullName>Welcome Call (NBUW)</fullName>
            </value>
            <value>
                <fullName>Teleclaim</fullName>
            </value>
            <value>
                <fullName>Retain Tahapan</fullName>
            </value>
            <value>
                <fullName>Request Quick Response</fullName>
            </value>
            <value>
                <fullName>Big RTU Complaint</fullName>
            </value>
            <value>
                <fullName>No Claim Bonus</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
            <value>
                <fullName>Birthday greeting</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Collection Task</fullName>
            </value>
            <value>
                <fullName>Reinstate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>