force-app/main/default/objects/Call_List__c/fields/Count_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Count_Invalid__c</fullName>
    <label>Count Invalid</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>