force-app/main/default/objects/Call_List__c/fields/Count_Upload__c.field-meta.xml
<CustomField>
    <fullName>Count_Upload__c</fullName>
    <label>Count Upload</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>