force-app/main/default/objects/Call_List__c/fields/Delete_Call_Line__c.field-meta.xml
<CustomField>
    <fullName>Delete_Call_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Call Line</label>
    <type>Checkbox</type>
</CustomField>