force-app/main/default/objects/Call_List__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>AMFS
AFI
MAGI</description>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALI</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>AMFS</fullName>
            </value>
            <value>
                <fullName>AFI</fullName>
            </value>
            <value>
                <fullName>AGI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>