force-app/main/default/objects/Call_List__c/fields/Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Expired_Date__c</fullName>
    <description>Expired Date</description>
    <label>Expired Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>