force-app/main/default/objects/Call_List__c/fields/Freeze_Update_Status_Paid__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Update_Status_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freeze Update Status Paid</label>
    <type>Checkbox</type>
</CustomField>