force-app/main/default/objects/Call_List__c/fields/Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Generated_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generated Date</label>
    <type>Date</type>
</CustomField>