force-app/main/default/objects/Call_List__c/fields/is_Expired_F__c.field-meta.xml
<CustomField>
    <fullName>is_Expired_F__c</fullName>
    <formula>if(Expired_Date__c &lt; today(), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Expired F</label>
    <type>Checkbox</type>
</CustomField>