force-app/main/default/objects/Call_List__c/fields/IsExpired__c.field-meta.xml
<CustomField>
    <fullName>IsExpired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>