force-app/main/default/objects/Call_List__c/fields/job_id__c.field-meta.xml
<CustomField>
    <fullName>job_id__c</fullName>
    <label>job_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>