force-app/main/default/objects/Call_List__c/fields/Max_Count_Coll_AMFS__c.field-meta.xml
<CustomField>
    <fullName>Max_Count_Coll_AMFS__c</fullName>
    <label>Max Count Coll AMFS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>