force-app/main/default/objects/Call_List__c/fields/New_Checkbox_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Checkbox_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Checkbox Field</label>
    <type>Checkbox</type>
</CustomField>