force-app/main/default/objects/Call_List__c/fields/Refresh_Parent__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refresh Parent</label>
    <type>Checkbox</type>
</CustomField>