force-app/main/default/objects/Call_List__c/fields/Todo_List_Config__c.field-meta.xml
<CustomField>
    <fullName>Todo_List_Config__c</fullName>
    <label>Todo List Config</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verifikasi</fullName>
            </value>
            <value>
                <fullName>Tanggal pendebetan jatuh tempo</fullName>
            </value>
            <value>
                <fullName>Masa pendebetan</fullName>
            </value>
            <value>
                <fullName>Hold debet (jika not approved)</fullName>
            </value>
            <value>
                <fullName>Retention jika tidak berkenan</fullName>
            </value>
            <value>
                <fullName>Status polis</fullName>
            </value>
            <value>
                <fullName>Doc pemulihan</fullName>
            </value>
            <value>
                <fullName>Waiting periode</fullName>
            </value>
            <value>
                <fullName>Monthly charge</fullName>
            </value>
            <value>
                <fullName>Loyalty bonus hilang (sesuai produk)</fullName>
            </value>
            <value>
                <fullName>Penalty jika ada</fullName>
            </value>
            <value>
                <fullName>Polis akan tidak aktif sementara jika NAB tidak mencukupi (PH Release)</fullName>
            </value>
            <value>
                <fullName>Pendingan POS</fullName>
            </value>
            <value>
                <fullName>Informasi NAB/Nilai Tunai Sementara</fullName>
            </value>
            <value>
                <fullName>Penalty</fullName>
            </value>
            <value>
                <fullName>Loyalty bonus</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Alasan penutupan polis</fullName>
            </value>
            <value>
                <fullName>Info manfaat produk</fullName>
            </value>
            <value>
                <fullName>Pastikan Due NCB</fullName>
            </value>
            <value>
                <fullName>Legal info pendebetan (inforce)</fullName>
            </value>
            <value>
                <fullName>Pengkinian data</fullName>
            </value>
            <value>
                <fullName>Alasan polis lapse</fullName>
            </value>
            <value>
                <fullName>Legal info pendebetan (ok debet)</fullName>
            </value>
            <value>
                <fullName>Konfirmasi tgl jatuh tempo</fullName>
            </value>
            <value>
                <fullName>Konsekuensi jika tidak ada pembayaran premi</fullName>
            </value>
            <value>
                <fullName>Campaign Emma</fullName>
            </value>
            <value>
                <fullName>Legal statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>