force-app/main/default/objects/Call_List__c/fields/Update_Agent_Child__c.field-meta.xml
<CustomField>
    <fullName>Update_Agent_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Agent Child</label>
    <type>Checkbox</type>
</CustomField>