force-app/main/default/objects/Call_List__c/fields/WelcomeCall_Fg_Automatic__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Fg_Automatic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fg Automatic</label>
    <type>Checkbox</type>
</CustomField>