force-app/main/default/objects/Call_List__c/recordTypes/ActivityAGI.recordType-meta.xml
<RecordType>
    <fullName>ActivityAGI</fullName>
    <active>true</active>
    <label>ActivityAGI</label>
</RecordType>