force-app/main/default/objects/Call_List__c/recordTypes/ActivityALI.recordType-meta.xml
<RecordType>
    <fullName>ActivityALI</fullName>
    <active>true</active>
    <label>ActivityALI</label>
</RecordType>