force-app/main/default/objects/Call_List__c/recordTypes/Callback.recordType-meta.xml
<RecordType>
    <fullName>Callback</fullName>
    <active>true</active>
    <description>Campaign for followup the callback</description>
    <label>Callback</label>
</RecordType>