force-app/main/default/objects/Call_List__c/recordTypes/Collection_AMFS.recordType-meta.xml
<RecordType>
    <fullName>Collection_AMFS</fullName>
    <active>true</active>
    <label>Collection AMFS</label>
</RecordType>