force-app/main/default/objects/Call_List__c/recordTypes/Confirmation_AFI.recordType-meta.xml
<RecordType>
    <fullName>Confirmation_AFI</fullName>
    <active>true</active>
    <label>Confirmation AFI</label>
</RecordType>