force-app/main/default/objects/Call_List__c/recordTypes/Confirmation_AMFS.recordType-meta.xml
<RecordType>
    <fullName>Confirmation_AMFS</fullName>
    <active>true</active>
    <label>Confirmation AMFS</label>
</RecordType>