force-app/main/default/objects/Call_List__c/recordTypes/Confirmation_MAGI.recordType-meta.xml
<RecordType>
    <fullName>Confirmation_MAGI</fullName>
    <active>true</active>
    <label>Confirmation MAGI</label>
</RecordType>