force-app/main/default/objects/Call_List__c/recordTypes/Customer_Segmentation_AMFS.recordType-meta.xml
<RecordType>
    <fullName>Customer_Segmentation_AMFS</fullName>
    <active>true</active>
    <label>Customer Segmentation AMFS</label>
</RecordType>