force-app/main/default/objects/Call_List__c/recordTypes/NonSurveyActivity.recordType-meta.xml
<RecordType>
    <fullName>NonSurveyActivity</fullName>
    <active>true</active>
    <description>Campaign for Non Survey Activity such as Confirmation, Conservation, Renewal</description>
    <label>NonSurveyActivity</label>
</RecordType>