force-app/main/default/objects/Call_List__c/recordTypes/SurveyActivity.recordType-meta.xml
<RecordType>
    <fullName>SurveyActivity</fullName>
    <active>true</active>
    <description>Campaign for Survey Activity such as either Survey of ERA/Towing Service or Claim Service</description>
    <label>SurveyActivity</label>
</RecordType>