force-app/main/default/objects/Call_List__c/recordTypes/TeleService_ICF.recordType-meta.xml
<RecordType>
    <fullName>TeleService_ICF</fullName>
    <active>true</active>
    <label>TeleService ICF</label>
</RecordType>