force-app/main/default/objects/Call_List__c/listViews/All_AFI.listView-meta.xml
<ListView>
    <fullName>All_AFI</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Expired_Date__c</columns>
    <columns>Entity__c</columns>
    <columns>Generated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AFI</value>
    </filters>
    <label>All AFI</label>
    <language>en_US</language>
    <sharedTo>
        <group>GroupAFI</group>
    </sharedTo>
</ListView>