force-app/main/default/objects/Call_List__c/listViews/All_ALI.listView-meta.xml
<ListView>
    <fullName>All_ALI</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Activity__c</columns>
    <columns>Case_Type_Config__c</columns>
    <columns>Expired_Date__c</columns>
    <columns>Entity__c</columns>
    <columns>Generated_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>ALI</value>
    </filters>
    <label>All ALI</label>
    <language>en_US</language>
    <sharedTo>
        <group>GroupALI</group>
    </sharedTo>
</ListView>