force-app/main/default/objects/Call_List__c/listViews/ALL_AMFS.listView-meta.xml
<ListView>
    <fullName>ALL_AMFS</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Expired_Date__c</columns>
    <columns>Entity__c</columns>
    <columns>Generated_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Case_Type_Config__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AMFS</value>
    </filters>
    <label>ALL AMFS</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>