force-app/main/default/objects/Call_List__c/listViews/All_Collection_AMFS_This_Month.listView-meta.xml
<ListView>
    <fullName>All_Collection_AMFS_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Activity__c</columns>
    <columns>Case_Type_Config__c</columns>
    <columns>Generated_Date__c</columns>
    <columns>Expired_Date__c</columns>
    <columns>IsExpired__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Call_List__c.Collection_AMFS</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>All Collection AMFS This Month</label>
    <language>en_US</language>
    <sharedTo>
        <role>AMFS_PIC_Collection</role>
    </sharedTo>
</ListView>