force-app/main/default/objects/Call_List__c/listViews/Created_This_Week.listView-meta.xml
<ListView>
    <fullName>Created_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Expired_Date__c</columns>
    <columns>Entity__c</columns>
    <columns>Generated_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Created This Week</label>
    <language>en_US</language>
</ListView>